[gd_scene load_steps=25 format=3 uid="uid://se8t5bp4t4j2"]

[ext_resource type="Texture2D" uid="uid://8hwgl6k01vsb" path="res://assets/anita_backup_idle.png" id="1_e0ky7"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_jpc22"]
[ext_resource type="Animation" uid="uid://b6yi0f5kdy5m8" path="res://animation/RESET.res" id="3_ljhb7"]
[ext_resource type="Texture2D" uid="uid://n36l0mcmn58m" path="res://assets/anita_backup_attack_v2.png" id="3_ttkdp"]
[ext_resource type="Animation" uid="uid://buwa4gmorwk13" path="res://animation/idle.res" id="4_4yj20"]
[ext_resource type="Script" path="res://scripts/FSM.gd" id="6_5uyx4"]
[ext_resource type="Script" path="res://scripts/idle.gd" id="6_20p1h"]
[ext_resource type="Texture2D" uid="uid://da5u5ox5r6tbi" path="res://assets/anita_backup_running.png" id="6_twxm1"]
[ext_resource type="Script" path="res://scripts/attackState.gd" id="8_1ccve"]
[ext_resource type="Script" path="res://scripts/running.gd" id="10_nc27d"]
[ext_resource type="Script" path="res://scripts/jumping.gd" id="11_ltb2t"]
[ext_resource type="Script" path="res://scripts/dash.gd" id="12_0udjl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s78h4"]
size = Vector2(168, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f38b6"]
size = Vector2(162, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfw2d"]
size = Vector2(129, 204)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fe7xf"]
size = Vector2(123, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx67e"]
size = Vector2(26, 103)

[sub_resource type="Animation" id="Animation_wcm3a"]
resource_name = "attack-1"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttkdp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D/Sprite2D/Area2D/attack1Col:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_54vp3"]
resource_name = "attack-2"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttkdp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D/Sprite2D/Area2D/attack2Col:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_8aeef"]
resource_name = "attack-3"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttkdp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D/Sprite2D/Area2D/attack3Col:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_7lri2"]
resource_name = "attack-4"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttkdp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D/Sprite2D/Area2D/attack4Col:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.000621049, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_vwh7j"]
resource_name = "dash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_twxm1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bodyCol:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0012349),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("dashCol:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.00117188),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_isaum"]
resource_name = "running"
length = 0.75
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_twxm1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5b6g"]
_data = {
"RESET": ExtResource("3_ljhb7"),
"attack-1": SubResource("Animation_wcm3a"),
"attack-2": SubResource("Animation_54vp3"),
"attack-3": SubResource("Animation_8aeef"),
"attack-4": SubResource("Animation_7lri2"),
"dash": SubResource("Animation_vwh7j"),
"idle": ExtResource("4_4yj20"),
"running": SubResource("Animation_isaum")
}

[node name="player" type="CharacterBody2D"]
z_index = 1
position = Vector2(251.085, 149.415)
collision_layer = 0
collision_mask = 16777216
script = ExtResource("1_jpc22")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(3.91491, -4.41489)

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture_filter = 1
position = Vector2(61.3333, -37.3333)
texture = ExtResource("1_e0ky7")
hframes = 5

[node name="Area2D" type="Area2D" parent="Marker2D/Sprite2D" groups=["playerAttacks"]]
position = Vector2(113.667, 53.3332)
collision_layer = 256
collision_mask = 0

[node name="attack1Col" type="CollisionShape2D" parent="Marker2D/Sprite2D/Area2D"]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_s78h4")
disabled = true

[node name="attack2Col" type="CollisionShape2D" parent="Marker2D/Sprite2D/Area2D"]
position = Vector2(-21, 5)
shape = SubResource("RectangleShape2D_f38b6")
disabled = true

[node name="attack3Col" type="CollisionShape2D" parent="Marker2D/Sprite2D/Area2D"]
position = Vector2(-20.5, -29)
shape = SubResource("RectangleShape2D_nfw2d")
disabled = true

[node name="attack4Col" type="CollisionShape2D" parent="Marker2D/Sprite2D/Area2D"]
position = Vector2(-23.5, -37)
shape = SubResource("RectangleShape2D_fe7xf")
disabled = true

[node name="dashCol" type="CollisionShape2D" parent="."]
position = Vector2(2.49643, 5.50421)
shape = SubResource("RectangleShape2D_jx67e")
disabled = true

[node name="bodyCol" type="CollisionShape2D" parent="."]
position = Vector2(1.24821, 2.75211)
shape = SubResource("RectangleShape2D_jx67e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w5b6g")
}

[node name="statemachine" type="Node" parent="." node_paths=PackedStringArray("init_state")]
script = ExtResource("6_5uyx4")
init_state = NodePath("idle")

[node name="idle" type="Node" parent="statemachine"]
script = ExtResource("6_20p1h")

[node name="attackState" type="Node" parent="statemachine"]
script = ExtResource("8_1ccve")

[node name="attackTimer" type="Timer" parent="statemachine/attackState"]
wait_time = 0.7
one_shot = true

[node name="attackComboTimer" type="Timer" parent="statemachine/attackState"]
one_shot = true

[node name="moveAttack" type="Timer" parent="statemachine/attackState"]
one_shot = true

[node name="running" type="Node" parent="statemachine"]
script = ExtResource("10_nc27d")

[node name="jump" type="Node" parent="statemachine"]
script = ExtResource("11_ltb2t")

[node name="dash" type="Node" parent="statemachine"]
script = ExtResource("12_0udjl")

[node name="dashCooldown" type="Timer" parent="statemachine/dash"]
one_shot = true

[node name="dashTime" type="Timer" parent="statemachine/dash"]
one_shot = true

[connection signal="timeout" from="statemachine/attackState/attackTimer" to="statemachine/attackState" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="statemachine/attackState/attackComboTimer" to="statemachine/attackState" method="_on_attack_combo_timer_timeout"]
[connection signal="timeout" from="statemachine/attackState/moveAttack" to="statemachine/attackState" method="_on_move_attack_timeout"]
[connection signal="timeout" from="statemachine/dash/dashCooldown" to="statemachine/dash" method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="statemachine/dash/dashTime" to="statemachine/dash" method="_on_dash_time_timeout"]
